--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                                   <h3>I'm Onkar Hirgude & <span style="font-size:24px; font-weight: 700;"> Web Developer</span></h3>  
                                   <P>I am an ambitious Self taught web developer. Skilled in JavaScript & MERN stack,
                                       and who focuses on writing Clean,elegant and effcient code.
-                                      I am strongly belives in the power of internet, and has be 
-                                      involved in its future development.In addition to coding, I love traveling, trekking and photoraphy...</P>
+                                      I strongly belives in the power of internet, and has be 
+                                      involved in its future development.In addition to coding, I love traveling, trekking and photography...</P>
                                 </div>
                             </div>
                             <div class="row">
@@ -123,7 +123,7 @@
                                             <p> City :<span style="font-weight: 400; color: #504e70; margin-left: 4px; display:inline-block;">Mumbai</span> </p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p> Degree:<span style="font-weight: 400; color: #504e70; margin-left: 4px; display:inline-block;">BBA</span> </p>
+                                            <p> Degree:<span style="font-weight: 400; color: #504e70; margin-left: 4px; display:inline-block;">BMS</span> </p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Phone: <span style="font-weight: 400; color: #504e70; margin-left: 4px; display:inline-block;">+91 9892415014</span> </p>
