--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
                                                 <h6 class="timeline-date">
-                                                    <i class="fa fa-calendar"></i>Dec 2020 - Currently</h6>
+                                                    <i class="fa fa-calendar"></i>Dec 2020 - May 2021</h6>
                                                 <h4 class="timeline-title">Internship as Full Stack Developer</h4>
                                                 <p class="timeline-text"></p>
                                                 </div>
@@ -262,6 +262,16 @@
                     </div>
                        </div>
                 <!------skills item end-->
+                        <!----skills item start--> 
+          <div class="service-item padd-15">
+            <div class="service-item-inner">
+                <div class="icon">
+                    <i class="fab fa-bootstrap"></i>
+                </div>
+                <h4> Bootstrap </h4>
+            </div>
+        </div>
+        <!------skills item end-->
                                 <!----skills item start-->
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
@@ -302,16 +312,7 @@
                 </div>
             </div>
             <!------skills item end-->
-          <!----skills item start--> 
-          <div class="service-item padd-15">
-            <div class="service-item-inner">
-                <div class="icon">
-                    <i class="fas fa-cubes"></i>
-                </div>
-                <h4> Data Structure & Algorithm </h4>
-            </div>
-        </div>
-        <!------skills item end-->
+          
     
                     </div>
                 </div>
