--- a/index.html
+++ b/index.html
@@ -459,7 +459,16 @@
                 }
           
                 }
-
+        window.
+onload
+= function() {
+  Particles.
+init
+({
+    selector: 
+'.background'
+  });
+};
 
            </script>
 </body>
