--- a/index.html
+++ b/index.html
@@ -397,6 +397,13 @@
 
     </div>
     <!----main container-->
+    <canvas class=
+"background"
+></canvas>
+  
+<script src=
+"path/to/particles.min.js"
+></script>
     <script>
         window.addEventListener("load",function(){
             document.querySelector(".loader").classList.add("opacity");
@@ -471,5 +478,6 @@ init
 };
 
            </script>
+    
 </body>
 </html>
