--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                <div class="intro">
                    <img src="porfolioimg2.jpg" alt="profile" class="shadow-dark">
                    <h1>Onkar Hirgude</h1>
-                   <p>I'm a Web Developer</p>
+                   <p>Full stack Web Developer</p>
                    <div class="social-links">
                        <a href="https://instagram.com/onkar_hirgude_18?igshid=e993rnfrhmca"><i class="fa fa-instagram"></i></a>
                        <a href="https://github.com/Onkarhirgude18"><i class="fa fa-github"></i></a>
