--- a/index.html
+++ b/index.html
@@ -400,11 +400,8 @@
     <canvas class=
 "background"
 ></canvas>
-  
-<script src=
-"path/to/particles.min.js"
-></script>
-    <script>
+    <script  src=
+"path/to/particles.min.js">
         window.addEventListener("load",function(){
             document.querySelector(".loader").classList.add("opacity");
             setTimeout(()=>{
