--- a/index.html
+++ b/index.html
@@ -242,7 +242,17 @@
                             </div>
                         </div>
                         <!------skills item end-->
-                      <!----skills item start-->
+                          <!----skills item start--> 
+          <div class="service-item padd-15">
+            <div class="service-item-inner">
+                <div class="icon">
+                    <i class="fab fa-Bootstarp"></i>
+                </div>
+                <h4> Bootstrap </h4>
+            </div>
+        </div>
+        <!------skills item end-->
+                        <!----skills item start-->
                       <div class="service-item padd-15">
                         <div class="service-item-inner">
                             <div class="icon">
@@ -302,16 +312,7 @@
                 </div>
             </div>
             <!------skills item end-->
-          <!----skills item start--> 
-          <div class="service-item padd-15">
-            <div class="service-item-inner">
-                <div class="icon">
-                    <i class="fas fa-cubes"></i>
-                </div>
-                <h4> Data Structure & Algorithm </h4>
-            </div>
-        </div>
-        <!------skills item end-->
+        
     
                     </div>
                 </div>
