--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           <div class="service-item padd-15">
             <div class="service-item-inner">
                 <div class="icon">
-                    <i class="fab fa-Bootstarp"></i>
+                    <i class="fab fa-bootstarp"></i>
                 </div>
                 <h4> Bootstrap </h4>
             </div>
